# LearnPythonAPI

./: .gitignore  Dockerfile  environment.py  main.py  pyproject.toml  pytest.ini
lib/: __init__.py  assertions.py  base_case.py  my_requests.py  test_user_auth.py
tests/: tests_short_phrase.py  tests_user_auth.py  tests_user_delete.py  tests_user_edit.py  tests_user_get.py  tests_user_register.py
